# sly_physics_xpbd

./: Cargo.toml  README.md
examples/: collision_box_box.rs  collision_box_sphere.rs  collision_sphere_sphere.rs  different_masses.rs  marble_pour.rs  particle_collisions.rs  stack.rs
examples/helper/: assets.rs  mod.rs  text_overlay.rs
src/: contacts.rs  lib.rs
src/colliders/: box.rs  mod.rs  sphere.rs
src/components/: aabb.rs  mod.rs
src/debug/: entity_aabb.rs  entity_aabb.wgsl  mod.rs
src/intersect/: box_sphere.rs  gjk.rs  mod.rs  sphere.rs
src/math/: mod.rs
src/phases/: broad.rs  collision_pairs.rs  integrate.rs  mod.rs  setup.rs  solve_positions.rs  solve_velocities.rs  update_velocities.rs
